Connected tags to resources

--- a/_includes/by_tag.html
+++ b/_includes/by_tag.html
@@ -20,7 +20,7 @@
 
   <div class="wrapper">
 
-      <a class="site-title" href="./index.html">{title}</a>
+      <a class="site-title" href="../index.html">{title}</a>
 
     <nav class="site-nav">
       <a href="#" class="menu-icon">
@@ -48,6 +48,9 @@
         <div class="home">
 
             <h1 class="page-heading">{tag}</h1>
+            <div>
+                <p>{resources}</p>
+            </div>
 
 </div>
 
