--- a/_includes/resource.html
+++ b/_includes/resource.html
@@ -48,6 +48,9 @@
         <div class="home">
 
             <h1 class="page-heading">{resource}</h1>
+            <div>
+                {images}
+            </div>
 
 </div>
 
