Resource page includes description

--- a/_includes/resource.html
+++ b/_includes/resource.html
@@ -48,6 +48,11 @@
         <div class="home">
 
             <h1 class="page-heading">{resource}</h1>
+            <div><p>
+                {desc}
+                </p>
+                <br/>
+            </div>
             <div>
                 {images}
             </div>
